# OCRTOC_software_package_legacy

./: .gitignore  CHANGELOG.md  LICENSE  README.md
description/robotiq_2f_85_gripper_visualization/: CMakeLists.txt  package.xml
description/robotiq_2f_85_gripper_visualization/urdf/: inertias.urdf.xacro  robotiq_2f_85.urdf.xacro  robotiq_2f_85_visualization.urdf.xacro  robotiq_ur_coupler.urdf.xacro
description/ur_e_description/: CMakeLists.txt
description/ur_e_description/launch/: ur5e_upload.launch  ur5e_upload_online.launch
description/ur_e_description/urdf/: _d435.gazebo.xacro  _d435.urdf.xacro  ur.gazebo.xacro  ur5e.urdf.xacro  ur5e_joint_limited_robot.urdf.xacro  ur5e_robot.urdf.xacro
docker/: Dockerfile  build.sh
ocrtoc_materials_real_stage/: CMakeLists.txt  objects.csv  package.xml
ocrtoc_materials_real_stage/models/bear_stationery_box/meshes/: textured.mtl
ocrtoc_materials_real_stage/models/bleach_cleanser/visual_meshes/: visual.dae
ocrtoc_materials_real_stage/models/blue_moon/meshes/: textured.mtl
ocrtoc_materials_real_stage/models/blue_moon/visual_meshes/: visual.dae
ocrtoc_materials_real_stage/models/cleanser/meshes/: textured.mtl
ocrtoc_materials_real_stage/models/cocacola1/meshes/: textured.mtl
ocrtoc_materials_real_stage/models/conditioner/meshes/: textured.mtl
ocrtoc_materials_real_stage/models/conditioner/visual_meshes/: visual.dae
ocrtoc_materials_real_stage/models/cracker_box/meshes/: license
ocrtoc_materials_real_stage/models/cracker_box/visual_meshes/: visual.dae
ocrtoc_materials_real_stage/models/doraemon_bowl/meshes/: textured.mtl
ocrtoc_materials_real_stage/models/elephant/meshes/: textured.mtl
ocrtoc_materials_real_stage/models/feng_tea_box/meshes/: textured.mtl
ocrtoc_materials_real_stage/models/gelatin_box/visual_meshes/: visual.dae
ocrtoc_materials_real_stage/models/green_arrow/visual_meshes/: visual.dae
ocrtoc_materials_real_stage/models/hello_kitty_bowl/meshes/: textured.mtl
ocrtoc_materials_real_stage/models/hello_kitty_cup/visual_meshes/: visual.dae
ocrtoc_materials_real_stage/models/polar_bear/meshes/: textured.mtl
ocrtoc_materials_real_stage/models/potted_meat_can/visual_meshes/: visual.dae
ocrtoc_materials_real_stage/models/pudding_box/visual_meshes/: visual.dae
ocrtoc_materials_real_stage/models/rabbit_bowl/meshes/: textured.mtl
ocrtoc_materials_real_stage/models/realsense_box/meshes/: textured.mtl
ocrtoc_materials_real_stage/models/realsense_box/visual_meshes/: visual.dae
ocrtoc_materials_real_stage/models/redbull/visual_meshes/: visual.dae
ocrtoc_materials_real_stage/models/sugar_box/visual_meshes/: visual.dae
ocrtoc_materials_real_stage/models/tea_can1/meshes/: textured.mtl
ocrtoc_materials_real_stage/scenes/1-1/: input.world  target.world
ocrtoc_materials_real_stage/scenes/2-1/: input.world  target.world
ocrtoc_solution/: CMakeLists.txt  package.xml
ocrtoc_solution/controller/: gripper_controller.yaml  joint_state_controller.yaml
ocrtoc_solution/launch/: commit_solution.launch  commit_solution_real_stage.launch  controllers.launch
ocrtoc_solution/scripts/: commit_solution.py
ocrtoc_task/: CMakeLists.txt  package.xml
ocrtoc_task/action/: Clean.action
ocrtoc_task/config/: my_robot_calibration.yaml  ur5_azure_kinect_handeyecalibration_eye_on_base.yaml  ur5_realsense_handeyecalibration_eye_on_hand.yaml
ocrtoc_task/launch/: all_devices.launch  bringup_simulator.launch  simulator_and_solution.launch  trigger_and_evaluation.launch  trigger_and_score.launch  trigger_real_stage.launch
ocrtoc_task/scripts/: trigger.py  trigger_and_evaluation.py  trigger_and_score.py
ocrtoc_task/urdf/: ur5e.urdf
(+1336 files in other folders)
