<?xml version="1.0"?>
<package format="2">
  <name>ocrtoc_materials_real_stage</name>
  <version>0.0.0</version>
  <description>The ocrtoc_materials_real_stage package</description>

  <maintainer email="info@ocrtoc.org">robot</maintainer>
  <license>ocrtoc</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
